updated toolbar stling when menu has focus

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -164,6 +164,18 @@
   </section>
 
   <section>
+    <h2>Focus Styling</h2>
+    <ol>
+      <li>
+        When the toolbar has focus, the container element border is highlighted.
+      </li>
+      <li>
+        When a toolbar button has focus, its border is highlighted and the background color of the button also changes.
+      </li>
+    </ol>
+  </section>
+
+  <section>
     <h2 id="kbd_label">Keyboard Support</h2>
 
 
