Add data-test-id attribute to remaining examples

--- a/examples/feed/feed.html
+++ b/examples/feed/feed.html
@@ -61,19 +61,19 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="key-page-down">
           <th><kbd>Page Down</kbd></th>
           <td>Move focus to next article.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-page-up">
           <th><kbd>Page Up</kbd></th>
           <td>Move focus to previous article.</td>
         </tr>
-        <tr>
+        <tr data-test-id="key-control-end">
           <th><kbd>Control + End</kbd></th>
           <td>Move focus to the first focusable element after the feed.</td>
         </tr>
-        <tr>
+        <tr data-test-id="hey-control-home">
           <th><kbd>Control + Home</kbd></th>
           <td>Move focus to the first focusable element before the feed.</td>
         </tr>
@@ -93,7 +93,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="feed-role">
           <th scope="row"><code>feed</code></th>
           <td></td>
           <td><code>div</code></td>
@@ -104,13 +104,13 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="feed-aria-labelledby">
           <td></td>
           <th scope="row"><code>aria-labelledby="IDREF"</code></th>
           <td><code>div</code></td>
           <td>Provides an accessible name for the feed element.</td>
         </tr>
-        <tr>
+        <tr data-test-id="feed-aria-busy">
           <td></td>
           <th scope="row"><code>aria-busy="true"</code></th>
           <td><code>div</code></td>
@@ -122,7 +122,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="article-role">
           <th scope="row"><code>article</code></th>
           <td></td>
           <td><code>div</code></td>
@@ -133,7 +133,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="article-tabindex">
           <td></td>
           <th scope="row"><code>tabindex="0"</code></th>
           <td><code>div</code></td>
@@ -145,7 +145,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="article-labelledby">
           <td> </td>
           <th scope="row"><code>aria-labelledby="IDREF_LIST"</code></th>
           <td><code>div</code></td>
@@ -157,7 +157,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="article-describedby">
           <td> </td>
           <th scope="row"><code>aria-describedby="IDREF_LIST"</code></th>
           <td><code>div</code></td>
@@ -169,7 +169,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="article-aria-posinset">
           <td> </td>
           <th scope="row"><code>aria-posinset="INTEGER"</code></th>
           <td><code>div</code></td>
@@ -181,7 +181,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="article-aria-setsize">
           <td></td>
           <th scope="row"><code>aria-setsize="INTEGER"</code></th>
           <td><code>div</code></td>
