--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -121,35 +121,35 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="key-right-arow">
               <th><kbd>Right Arrow</kbd></th>
               <td>Increases slider value one step.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-up-arrow">
               <th><kbd>Up Arrow</kbd></th>
               <td>Increases slider value one step.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-left-arrow">
               <th><kbd>Left Arrow</kbd></th>
               <td>Decreases slider value one step.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-down-arrow">
               <th><kbd>Down Arrow</kbd></th>
               <td>Decreases slider value one step.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-page-up">
               <th><kbd>Page Up</kbd></th>
               <td>Increases slider value multiple steps. In this slider, jumps ten steps.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-page-down">
               <th><kbd>Page Down</kbd></th>
               <td>Decreases slider value multiple steps. In this slider, jumps ten steps.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-home">
               <th><kbd>Home</kbd></th>
               <td>Sets slider to its minimum value.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-end">
               <th><kbd>End</kbd></th>
               <td>Sets slider to its maximum value.</td>
             </tr>
@@ -169,7 +169,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="slider-role">
             <th scope="row">
               <code>slider</code>
             </th>
@@ -184,7 +184,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="tabindex">
             <td></td>
             <th scope="row">
               <code>tabindex=<q>0</q></code>
@@ -194,7 +194,7 @@
             </td>
             <td>Includes the slider thumb in the page tab sequence.</td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-valuemax">
             <td></td>
             <th scope="row">
               <code>aria-valuemax=<q>NUMBER</q></code>
@@ -204,7 +204,7 @@
             </td>
             <td>Specifies the maximum value of the slider.</td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-valuemin">
             <td></td>
             <th scope="row">
               <code>aria-valuemin=<q>NUMBER</q></code>
@@ -214,7 +214,7 @@
             </td>
             <td>Specifies the minimum value of the slider.</td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-valuenow">
             <td></td>
             <th scope="row">
               <code>aria-valuenow=<q>NUMBER</q></code>
@@ -224,7 +224,7 @@
             </td>
             <td>Indicates the current value of the slider.</td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-valuetext">
             <td></td>
             <th scope="row">
               <code>aria-valuetext=<q>DOLLAR AMOUNT</q></code>
@@ -234,7 +234,7 @@
             </td>
             <td>Indicates the current value of the slider in dollars using the <q>$</q> character as a prefix.</td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-label">
             <td></td>
             <th scope="row">
               <code>aria-label=<q>text</q></code>
