--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -261,7 +261,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="key-tab">
           <th>
             <kbd>Tab</kbd>
           </th>
@@ -269,7 +269,7 @@
               Moves keyboard focus to the disclosure button.
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="key-space-or-enter">
           <th>
             <kbd>Space</kbd> or <br />
             <kbd>Enter</kbd>
@@ -295,7 +295,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="aria-controls">
           <td></td>
           <th scope="row">
             <code>aria-controls=&quot;IDREF&quot;</code>
@@ -309,7 +309,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-expanded-false">
           <td></td>
           <th scope="row">
             <code>aria-expanded=&quot;false&quot;</code>
@@ -334,7 +334,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-expanded-true">
           <td></td>
           <th scope="row">
             <code>aria-expanded=&quot;true&quot;</code>
