--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -96,11 +96,11 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="button-down-arrow-or-space-or-enter">
               <th><kbd>Down Arrow</kbd><br><kbd>Space</kbd><br><kbd>Enter</kbd></th>
               <td>Opens <code>menu</code> and moves focus to first <code>menuitem</code></td>
             </tr>
-            <tr>
+            <tr data-test-id="button-up-arrow">
               <th><kbd>Up Arrow</kbd></th>
               <td>Opens <code>menu</code> and moves focus to last <code>menuitem</code></td>
             </tr>
@@ -115,7 +115,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="menu-enter">
               <th><kbd>Enter</kbd></th>
               <td>
                 <ul>
@@ -125,7 +125,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-escape">
               <th><kbd>Escape</kbd></th>
               <td>
                 <ul>
@@ -134,7 +134,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-up-arrow">
               <th><kbd>Up Arrow</kbd></th>
               <td>
                 <ul>
@@ -143,7 +143,7 @@
                 </ul>
               </td>
             </tr>
-             <tr>
+             <tr data-test-id="menu-down-arrow">
               <th><kbd>Down Arrow</kbd></th>
               <td>
                 <ul>
@@ -152,15 +152,15 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-home">
               <th><kbd>Home</kbd></th>
               <td>Moves focus to the first menu item.</td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-end">
               <th><kbd>End</kbd></th>
               <td>Moves focus to the last menu item.</td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-character">
               <th><kbd>A-Z</kbd><br><kbd>a-z</kbd></th>
               <td>
                 <ul>
@@ -186,7 +186,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="button-aria-haspopup">
               <td></td>
               <th scope="row"><code>aria-haspopup=&quot;true&quot;</code></th>
               <td>
@@ -202,7 +202,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="button-aria-controls">
               <td></td>
               <th scope="row"><code>aria-controls=&quot;IDREF&quot;</code></th>
               <td>
@@ -215,7 +215,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="button-aria-expanded">
                 <td></td>
                 <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
                 <td><code>button</code></td>
@@ -241,7 +241,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="menu-role">
               <th scope="row">
                 <code>menu</code>
               </th>
@@ -251,7 +251,7 @@
               </td>
               <td>Identifies the <code>ul</code> element as a <code>menu</code>.</td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-aria-labelledby">
               <td>
                 <code></code>
               </td>
@@ -266,7 +266,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td>
@@ -280,7 +280,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="menu-aria-activedescendant">
               <td></td>
               <th scope="row"><code>aria-activedescendant=&quot;IDREF&quot;</code></th>
               <td>
@@ -298,7 +298,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="menuitem-role">
               <th scope="row">
                 <code>menuitem</code>
               </th>
