--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -186,13 +186,13 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="menubar-space-or-enter">
           <th>
             <kbd>Space</kbd><br><kbd>Enter</kbd>
           </th>
           <td>Opens submenu and moves focus to first item in the submenu.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-right-arrow">
           <th>
             <kbd>Right Arrow</kbd>
           </th>
@@ -203,7 +203,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-left-arrow">
           <th>
             <kbd>Left Arrow</kbd>
           </th>
@@ -214,31 +214,31 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-down-arrow">
           <th>
             <kbd>Down Arrow</kbd>
           </th>
           <td>Opens submenu and moves focus to first item in the submenu.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-up-arrow">
           <th>
             <kbd>Up Arrow</kbd>
           </th>
           <td>Opens submenu and moves focus to last item in the submenu.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-home">
           <th>
             <kbd>Home</kbd>
           </th>
           <td>Moves focus to first item in the menubar.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-end">
           <th>
             <kbd>End</kbd>
           </th>
           <td>Moves focus to last item in the menubar.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-character">
           <th>
             <kbd>Character</kbd>
           </th>
@@ -260,7 +260,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="submenu-space-or-enter">
           <th>
             <kbd>Space</kbd><br><kbd>Enter</kbd>
           </th>
@@ -271,7 +271,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-escape">
           <th>
             <kbd>Escape</kbd>
           </th>
@@ -282,7 +282,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-right-arrow">
           <th>
             <kbd>Right Arrow</kbd>
           </th>
@@ -299,7 +299,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-left-arrow">
           <th>
             <kbd>Left Arrow</kbd>
           </th>
@@ -315,7 +315,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-down-arrow">
           <th>
             <kbd>Down Arrow</kbd>
           </th>
@@ -326,7 +326,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-up-arrow">
           <th>
             <kbd>Up Arrow</kbd>
           </th>
@@ -337,19 +337,19 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-home">
           <th>
             <kbd>Home</kbd>
           </th>
           <td>Moves focus to the first item in the submenu.</td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-end">
           <th>
             <kbd>End</kbd>
           </th>
           <td>Moves focus to the last item in the submenu.</td>
         </tr>
-        <tr>
+        <tr data-test-id="submenu-character">
           <th>
             <kbd>Character</kbd>
           </th>
@@ -377,7 +377,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="menubar-role">
           <th>
             <code>menubar</code>
           </th>
@@ -392,7 +392,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="menubar-aria-label">
           <td></td>
           <th>
             <code>aria-label=&quot;<em>string</em>&quot;
@@ -411,7 +411,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="menuitem-role">
           <th>
             <code>menuitem</code>
           </th>
@@ -426,7 +426,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="menuitem-tabindex">
           <td></td>
           <th>
             <code>tabindex=&quot;-1&quot;</code>
@@ -438,7 +438,7 @@
             Makes the <code>a</code> element keyboard focusable, but <strong>not</strong> part of the tab sequence.
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="menuitem-tabindex">
           <td></td>
           <th>
             <code>tabindex=&quot;0&quot;</code>
@@ -455,7 +455,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="menuitem-aria-haspopup">
           <td></td>
           <th>
             <code>aria-haspopup=&quot;true&quot;</code>
@@ -465,7 +465,7 @@
           </td>
           <td>Indicates the menuitem has a submenu.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menuitem-aria-expanded">
           <td></td>
           <th>
             <code>aria-expanded=&quot;true&quot;</code>
@@ -475,7 +475,7 @@
           </td>
           <td>Indicates the submenu is open.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menuitem-aria-expanded">
           <td></td>
           <th>
             <code>aria-expanded=&quot;false&quot;</code>
@@ -485,7 +485,7 @@
           </td>
           <td>Indicates the submenu is closed.</td>
         </tr>
-        <tr>
+        <tr data-test-id="none-role">
           <th>
             <code>none</code>
           </th>
@@ -513,7 +513,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="menu-role">
           <th>
             <code>menu</code>
           </th>
@@ -523,7 +523,7 @@
           </td>
           <td>Identifies the element as a menu container for a set of menu items.</td>
         </tr>
-        <tr>
+        <tr data-test-id="menu-aria-label">
           <td></td>
           <th>
             <code>aria-label=&quot;<em>string</em>&quot;
@@ -542,7 +542,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="sub-menuitem-role">
           <th>
             <code>menuitem</code>
           </th>
@@ -557,7 +557,7 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="sub-menuitem-tabindex">
           <td></td>
           <th>
             <code>tabindex=&quot;-1&quot;</code>
@@ -567,7 +567,7 @@
           </td>
           <td>Keeps the <code>a</code> element focusable but removes it from the <kbd>Tab</kbd> sequence.</td>
         </tr>
-        <tr>
+        <tr data-test-id="sub-menuitem-aria-haspopup">
           <td></td>
           <th>
             <code>aria-haspopup=&quot;true&quot;</code>
@@ -577,7 +577,7 @@
           </td>
           <td>Indicates the menu item has a submenu.</td>
         </tr>
-        <tr>
+        <tr data-test-id="sub-menuitem-aria-expanded">
           <td></td>
           <th>
             <code>aria-expanded=&quot;true&quot;</code>
@@ -587,7 +587,7 @@
           </td>
           <td>Indicates the submenu is open.</td>
         </tr>
-        <tr>
+        <tr data-test-id="sub-menuitem-aria-expanded">
           <td></td>
           <th>
             <code>aria-expanded=&quot;false&quot;</code>
@@ -597,7 +597,7 @@
           </td>
           <td>Indicates the submenu is closed.</td>
         </tr>
-        <tr>
+        <tr data-test-id="sub-none-role">
           <th>
             <code>none</code>
           </th>
