Regression Tests: Add test infra and tests for 27 example pages (pull #895)
Add Aava.js regression test infra and tests for 27 example pages:

alert.js
breadcrumb.js
button.js
checkbox-1.js
checkbox-2.js
combobox-autocomplete-both.js
combobox-autocomplete-list.js
combobox-autocomplete-none.js
dialog.js
disclosure-faq.js
grid-combo.js
LayoutGrids.js
link.js
listbox-combo.js
listbox-scrollable.js
menu-button-actions.js
menubar-2.js
radio-1.js
slider-1.js
table.js
tabs.js
toolbar.js
treegrid-1.js
treeview-1a.js
treeview-1b.js
treeview-2a.js
treeview-2b.js

--- a/examples/link/link.html
+++ b/examples/link/link.html
@@ -113,7 +113,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="key-enter">
           <th><kbd>enter</kbd></th>
           <td>
           Activates the link.
@@ -135,7 +135,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="link-role">
           <th scope="row"><code>link</code></th>
           <td>
           </td>
@@ -147,13 +147,13 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="tabindex">
           <td></td>
           <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
           <td><code>span</code>, <br/><code>img</code></td>
           <td>Includes the link element in the page tab sequence.</td>
         </tr>
-        <tr>
+        <tr data-test-id="alt">
           <td></td>
           <th scope="row"><code>alt</code></th>
           <td><code>img</code></td>
@@ -161,7 +161,7 @@
                 Example 2: Defines the accessible name of the link.
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="aria-label">
           <td></td>
           <th scope="row"><code>aria-label</code></th>
           <td><code>span</code></td>
