some updated/not finished

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -101,21 +101,17 @@
             </div>
           </div>
           <div class="group">
-            <input type="text"
-                size="5"
-                role="spinbutton"
-                class="item font-size">
-            <div class="button font-larger"
-                aria-label="Font size larger"
-                aria-disabled="false"
+            <div role="button" 
+                class="item copy"
+                aria-label="copy textarea"
                 tabindex="-1">
-              <i class="fas fa-plus"></i>
+              Copy
             </div>
-            <div class="button font-smaller"
-                aria-label="Font size smaller"
-                aria-disabled="false"
+            <div role="button"
+                class="item paste"
+                aria-label="paste to textarea"
                 tabindex="-1">
-              <i class="fas fa-minus"></i>
+                Paste  
             </div>
           </div>
           <div class="menu-wrapper group" >
