Fix quotes inside code elements

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -279,7 +279,7 @@
         </tr>
         <tr data-test-id="button-aria-expanded">
           <td> </td>
-          <th scope="row"><code>aria-expanded=<q>true</q></code></th>
+          <th scope="row"><code>aria-expanded="true"</code></th>
           <td><code>button</code></td>
           <td>
             Set to <code>true</code> when the Accordion panel is expanded, otherwise set to <code>false</code>.
@@ -287,7 +287,7 @@
         </tr>
         <tr data-test-id="button-aria-controls">
           <td> </td>
-          <th scope="row"><code>aria-controls=<q>ID</q></code></th>
+          <th scope="row"><code>aria-controls="ID"</code></th>
           <td><code>button</code></td>
           <td>
             Points to the ID of the panel which the header controls.
@@ -295,7 +295,7 @@
         </tr>
         <tr data-test-id="button-aria-disabled">
           <td> </td>
-          <th scope="row"><code>aria-disabled=<q>true</q></code></th>
+          <th scope="row"><code>aria-disabled="true"</code></th>
           <td><code>button</code></td>
           <td>
             If the accordion panel is expanded and is not allowed to be collapsed, then set to <code>true</code>.
@@ -309,7 +309,7 @@
         </tr>
         <tr data-test-id="region-aria-labelledby">
           <td></td>
-          <th scope="row"><code>aria-labelledby=&quot;ID_REF&quot;</code></th>
+          <th scope="row"><code>aria-labelledby="IDREF"</code></th>
           <td><code>div</code></td>
           <td>
             <ul>
