--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -18,6 +18,7 @@
 <link href="css/toolbar.css"    rel="stylesheet">
 <link href="css/menuButton.css" rel="stylesheet">
 
+<script src="js/Textarea.js" type="text/javascript"></script>
 <script src="js/FormatToolbarItem.js" type="text/javascript"></script>
 <script src="js/FormatToolbar.js"     type="text/javascript"></script>
 <script src="js/FontMenuItem.js"      type="text/javascript"></script>
@@ -103,15 +104,27 @@
           <div class="group">
             <div role="button" 
                 class="item copy"
+                aria-disabled="true"
                 aria-label="copy textarea"
+                disabled = "true"
                 tabindex="-1">
               Copy
             </div>
             <div role="button"
                 class="item paste"
+                aria-disabled="true"
                 aria-label="paste to textarea"
+                disabled = "true"
                 tabindex="-1">
                 Paste  
+            </div>
+            <div role="button"
+                class="item cut"
+                aria-disabled="true"
+                aria-label="cut textarea"
+                disabled = "true"
+                tabindex="-1">
+                Cut
             </div>
           </div>
           <div class="menu-wrapper group" >
