Add tests for slider

--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -121,7 +121,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr data-test-id="key-right-arow">
+            <tr data-test-id="key-right-arrow">
               <th><kbd>Right Arrow</kbd></th>
               <td>Increases slider value one step.</td>
             </tr>
