Add tests for disclosure/disclosure-img-long-description.html

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -309,7 +309,7 @@
             </ul>
           </td>
         </tr>
-        <tr data-test-id="aria-expanded-false">
+        <tr data-test-id="aria-expanded">
           <td></td>
           <th scope="row">
             <code>aria-expanded=&quot;false&quot;</code>
@@ -334,7 +334,7 @@
             </ul>
           </td>
         </tr>
-        <tr data-test-id="aria-expanded-true">
+        <tr data-test-id="aria-expanded">
           <td></td>
           <th scope="row">
             <code>aria-expanded=&quot;true&quot;</code>
