Add tests for feed/feed.html

--- a/examples/feed/feed.html
+++ b/examples/feed/feed.html
@@ -73,7 +73,7 @@
           <th><kbd>Control + End</kbd></th>
           <td>Move focus to the first focusable element after the feed.</td>
         </tr>
-        <tr data-test-id="hey-control-home">
+        <tr data-test-id="key-control-home">
           <th><kbd>Control + Home</kbd></th>
           <td>Move focus to the first focusable element before the feed.</td>
         </tr>
