Add missing data-test-ids

--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -228,7 +228,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="standard-single-line-editing-keys">
             <th>Standard single line text editing keys</th>
             <td>
               <ul>
