--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -175,7 +175,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="standard-single-line-editing-keys">
             <th>Standard single line text editing keys</th>
             <td>
               <ul>
