--- a/examples/combobox/aria1.1pattern/grid-combo.html
+++ b/examples/combobox/aria1.1pattern/grid-combo.html
@@ -111,7 +111,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="standard-single-line-editing-keys">
             <th>Standard single line text editing keys</th>
             <td>
               <ul>
