Add some missing tests

--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -100,7 +100,7 @@
           </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr data-test-id="h3">
               <th scope="row"></th>
               <td></td>
               <td><code>h3</code></td>
