--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -181,7 +181,7 @@
               </ul>
             </td>
           </tr>
-          <tr data-test-id="textbox-text-edit">
+          <tr data-test-id="standard-single-line-editing-keys">
             <th>Standard single line text editing keys</th>
             <td>
               <ul>
