updarted labels and descritpions for cut, copy and paste

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -105,21 +105,21 @@
             <button
                 class="item copy"
                 aria-disabled="true"
-                aria-label="copy textarea"
+                title="Copy selected text form textarea"
                 tabindex="-1">
               Copy
             </button>
             <button
                 class="item paste"
                 aria-disabled="true"
-                aria-label="paste to textarea"
+                title="Paste last copied or cut text to textarea"
                 tabindex="-1">
                 Paste
             </button>
             <button
                 class="item cut"
                 aria-disabled="true"
-                aria-label="cut textarea"
+                title="Cut selected text form textarea"
                 tabindex="-1">
                 Cut
             </button>
